Update : category
