# public/swagger.json
@@ -3,10 +3,14 @@
   "info": {
     "description": "",
     "version": "1.0.0",
-    "title": "Swagger Petstore"
+    "title": "Temperature Outfit API"
   },
   "host": "localhost:3000",
   "tags": [
+    {
+      "name": "category",
+      "description": "카테고리"
+    },
     {
       "name": "product",
       "description": "옷 & 악세서리"
@@ -17,15 +21,32 @@
     }
   ],
   "paths": {
+    "/api/category": {
+      "get": {
+        "tags": ["category"],
+        "description": "카테고리 전체 조회",
+        "responses": {
+          "200": {
+            "description": "조회 성공",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/CategoryResponse"
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/product": {
       "get": {
         "tags": [
           "product"
         ],
-        "description": "내 옷 & 악세서리 조회",
         "produces": [
           "application/json"
         ],
+        "description": "내 옷 & 악세서리 목록 조회",
         "parameters": [
           {
             "name": "body",
@@ -155,10 +176,10 @@
         "tags": [
           "outfit"
         ],
-        "description": "내 옷차림 조회",
         "produces": [
           "application/json"
         ],
+        "description": "내 옷차림 목록 조회",
         "parameters": [
           {
             "name": "body",
@@ -297,6 +318,35 @@
     }
   },
   "definitions": {
+    "CategoryResponse": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "example": "top"
+        },
+        "name": {
+          "type": "string",
+          "example": "상의"
+        },
+        "children": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "id": {
+                "type": "string",
+                "example": "sleeveless"
+              },
+              "name": {
+                "type": "string",
+                "example": "민소매"
+              }
+            }
+          }
+        }
+      }
+    },
     "ProductResponse": {
       "type": "object",
       "properties": {
